# IntelliFind

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
src/chunking/: chunk_token.py  test_langchain.py
src/file_uploader/: file_uploader.py
src/functions/: chunk.js  index-text.js  make-http-call-with-chunking.js
src/handlers/index/: create.js  create.py
src/http_server/http_server/: settings.py  urls.py
src/openai_embeddings/: request.py  response.json  tst.py
src/server/: main.py
